// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/buildkite/extract extractPackageFile() adds skipReason 1`] = `
Array [
  Object {
    "currentValue": "v1.3.2.5",
    "depName": "namespace/docker-compose",
    "skipReason": "invalid-version",
  },
  Object {
    "currentValue": "v1.3.2",
    "depName": "https://github.com/buildkite/plugin-docker-compose",
    "skipReason": "git-plugin",
  },
  Object {
    "currentValue": "v1.3.2",
    "depName": "github.com/buildkite/plugin-docker-compose",
    "skipReason": "invalid-dependency-specification",
  },
]
`;

exports[`manager/buildkite/extract extractPackageFile() extracts arrays of plugins 1`] = `
Array [
  Object {
    "currentValue": "v2.0.1",
    "datasource": "github-tags",
    "depName": "docker-login",
    "lookupName": "buildkite-plugins/docker-login-buildkite-plugin",
    "skipReason": undefined,
  },
  Object {
    "currentValue": "v2.5.1",
    "datasource": "github-tags",
    "depName": "docker-compose",
    "lookupName": "buildkite-plugins/docker-compose-buildkite-plugin",
    "skipReason": undefined,
  },
  Object {
    "currentValue": "v2.0.1",
    "datasource": "github-tags",
    "depName": "docker-login",
    "lookupName": "buildkite-plugins/docker-login-buildkite-plugin",
    "skipReason": undefined,
  },
  Object {
    "currentValue": "v2.5.1",
    "datasource": "github-tags",
    "depName": "docker-compose",
    "lookupName": "buildkite-plugins/docker-compose-buildkite-plugin",
    "skipReason": undefined,
  },
]
`;

exports[`manager/buildkite/extract extractPackageFile() extracts multiple plugins in same file 1`] = `
Array [
  Object {
    "currentValue": "v1.3.2",
    "datasource": "github-tags",
    "depName": "docker-compose",
    "lookupName": "buildkite-plugins/docker-compose-buildkite-plugin",
    "skipReason": undefined,
  },
  Object {
    "currentValue": "v1.3.2",
    "datasource": "github-tags",
    "depName": "docker-compose",
    "lookupName": "buildkite-plugins/docker-compose-buildkite-plugin",
    "skipReason": undefined,
  },
]
`;

exports[`manager/buildkite/extract extractPackageFile() extracts simple single plugin 1`] = `
Array [
  Object {
    "currentValue": "v3.2.7",
    "datasource": "github-releases",
    "depName": "some-org/some-plugin",
    "skipReason": undefined,
  },
  Object {
    "currentValue": "v33.3.7",
    "datasource": "github-releases",
    "depName": "some-other-org/some-other-plugin",
    "skipReason": undefined,
  },
  Object {
    "currentValue": "v0.0.1",
    "datasource": "github-releases",
    "depName": "some-third-org/some-third-plugin",
    "skipReason": undefined,
  },
]
`;
